finished first table

--- a/pages/index.html
+++ b/pages/index.html
@@ -50,9 +50,30 @@
                 <div class="img-3"></div>
             </div>
 
-            <div class="flex-2"></div>
-            
-            <div class="flex-3"></div>
+            <div class="line"></div>
+
+            <div class="flex-2">
+                <div class="box-2">
+                    <h2>02 / PROJECT NAME</h2>
+                    <h3>My second project aimed at learning html && css</h3>
+                    <h4>HTML, CSS, React, Node.js, JavaScript, TypeScript</h4>
+                    <p>More shots from this project </p>
+                </div>
+                <div class="img-3"></div>
+            </div>
+
+            <div class="line"></div>
+
+
+            <div class="flex-3">
+                <div class="box-3">
+                    <h2>03 / PROJECT NAME</h2>
+                    <h3>My third project aimed at learning html && css</h3>
+                    <h4>HTML, CSS, React, Node.js, JavaScript, TypeScript</h4>
+                    <p>More shots from this project </p>
+                </div>
+                <div class="img-3"></div>
+            </div>
 
 
         </section>
@@ -60,13 +81,17 @@
 
 
 
-    <footer></footer>
+    <footer>
+        <nav>
+            <p class="name">Anton ⏤ 2022</p>
+        </nav>
+        <nav class="nav-1">
+            <p class="linkedin">Linkedin</p>
+            <p class="tg">TG</p>
+        </nav>
+    </footer>
 
-
-
-
-
-
+    
 </body>
 
 
