--- a/pages/contact.html
+++ b/pages/contact.html
@@ -16,10 +16,18 @@
     <header>
         <div class="logo"></div>
         <nav>
-            <p>Work</p>
-            <p>About</p>
-            <p>Playground</p>
-            <p>Contact</p>
+            <p>
+                <a href="../pages/index.html">Work</a>
+            </p>
+            <p>
+                <a href="../pages/abaut.html">About</a>
+            </p>
+            <p>
+                <a href="https://github.com/AntonMiranovich">Playground</a>
+            </p>
+            <p>
+                <a href="../pages/contact.html">Contact</a>
+            </p>
         </nav>
     </header>
 
