--- a/pages/index.html
+++ b/pages/index.html
@@ -18,10 +18,18 @@
     <header>
         <div class="img"></div>
         <nav>
-            <p>Work</p>
-            <p>About</p>
-            <p>Playground</p>
-            <p>Contact</p>
+            <p>
+                <a href="../pages/index.html">Work</a>
+            </p>
+            <p>
+                <a href="../pages/abaut.html">About</a>
+            </p>
+            <p>
+                <a href="https://github.com/AntonMiranovich">Playground</a>
+            </p>
+            <p>
+                <a href="../pages/contact.html">Contact</a>
+            </p>
         </nav>
 
 
